--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,4 +2,50 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  outline: none;
+}
+
+:root {
+  --white: #fff;
+  --black: #000;
+
+  --primary: #ff8402;
+  --gray-500: #7a7a7a56;
+
+  --warn:  #E53935;
+}
+
+body {
+  background: var(--blue-800);
+  color: var(--white);
+}
+
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1rem "Montserrat", sans-serif;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+button {
+  cursor: pointer;
+  border-radius: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
