--- a/src/styles/pages/Login.module.scss
+++ b/src/styles/pages/Login.module.scss
@@ -27,32 +27,67 @@
     
       justify-content: space-evenly;
 
-      input {
-        width: 100%;
-        padding: 15px;
-      
-        background: transparent;
-        border: 0;
-        background: rgba(140, 145, 165, 0.08);
-      
-        outline: #f5f5f5;
-      
-        transition: border-color 0.2s;
+      .wrapperInput {
 
-        & + input {
+        .input {
           margin-top: 15px;
-        }
 
-        &:focus {
-          border-color: #ff8402;
-        }
+          label {
+            position: relative;
 
-        &::placeholder {
-          text-transform: uppercase;
-          color: rgb(108, 117, 125);
+            input {
+              width: 100%;
+              font-family: Montserrat, sans-serif;
+              font-size: 1.2rem;
+              background: transparent;
+
+              padding: 1rem 3.2rem 1rem 1.2rem;
+              min-width: 24rem;
+
+              border-radius: 0.2rem;
+              border: 2px solid var(--gray-500);
+
+              transition: border-color 0.2s;
+
+              &:focus {
+                border-color: var(--primary);
+              }
+
+              &:focus + p,
+              &:not(:placeholder-shown) + p {
+                top: -20px;
+                font-size: 1rem;
+                color: var(--primary);
+              }
+
+              &:not(:focus) + p {
+                color: var(--gray-500);
+              }
+
+              &.error {
+                border-color: var(--warn);
+              }
+            }
+
+            p {
+              color: #f9f9f9;
+              font-size: 1.2rem;
+              user-select: none;
+              font-weight: 500;
+              position: absolute;
+              top: 50%;
+              transform: translateY(-50%);
+
+              margin-left: 0.8rem;
+              padding: 0 0.4rem;
+
+              background: var(--white);
+
+              transition: top 0.2s, font-size 0.2s, color 0.2s;
+            }
+          }
         }
       }
-
       button {
         width: 100%;
         padding: 15px;
