--- a/src/styles/pages/Login.module.scss
+++ b/src/styles/pages/Login.module.scss
@@ -87,12 +87,15 @@
             }
           }
         }
+
+        
       }
+
       button {
         width: 100%;
         padding: 15px;
       
-        background-color: #ff8402;
+        background-color: var(--primary);
         color: #fff;
         border: 0;
         border-radius: 5px;
@@ -139,7 +142,7 @@
         display: block; 
       
         text-decoration: none; 
-        color: #ff8402;
+        color: var(--primary);
         font-family: Montserrat, sans-serif;
         margin-top: 10px; 
         font-weight: 500; 
