--- a/src/styles/pages/Login.module.scss
+++ b/src/styles/pages/Login.module.scss
@@ -157,7 +157,7 @@
 
   footer {
     width: 100%;
-    color:#fff;
+    color:#835642;
     text-align: center;
     font-family: Montserrat, sans-serif;
     font-size: 10px;
