--- a/src/styles/pages/Login.module.scss
+++ b/src/styles/pages/Login.module.scss
@@ -28,7 +28,6 @@
       justify-content: space-evenly;
 
       .wrapperInput {
-
         .input {
           margin-top: 15px;
 
@@ -157,7 +156,7 @@
 
   footer {
     width: 100%;
-    color:#835642;
+    color:#fff;
     text-align: center;
     font-family: Montserrat, sans-serif;
     font-size: 10px;
