--- a/src/components/Sidebar/styles.module.scss
+++ b/src/components/Sidebar/styles.module.scss
@@ -10,7 +10,8 @@
   z-index: 99;
   transition: all 0.5s ease;
 
-  box-shadow: var(--box-shadow);
+  // box-shadow: var(--box-shadow);
+  border-right: 1px solid var(--primary-light);
 }
 .sidebar.open{
   width: 250px;
