--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,8 +10,8 @@
   --black: #000;
 
   --primary: #ff8402;
-  --gray-10: #f8f8ff;
-  --gray-100: #fbfaff;
+  --primary-light: #ffa94f;
+  
   --gray-500: #7a7a7a56;
 
   --warn:  #E53935;
@@ -20,12 +20,18 @@
   --green-dark: #3cac21;
 
   --box-shadow:0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+
+  // v2
+  --background:#f2f3f9
 }
 
 body {
   position: relative;
   min-height: 100vh;
   width: 100%;
+
+  background: var(--background);
+
 }
 
 body,
