--- a/src/styles/pages/atendimento/Listuser.module.scss
+++ b/src/styles/pages/atendimento/Listuser.module.scss
@@ -4,3 +4,175 @@
   grid-template-columns: repeat(auto-fit, minmax(800px, 1fr));
   grid-gap: 30px;
 }
+
+.pageHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  min-height: 50px;
+
+  div {
+    h1 {
+      margin: 0;
+      font-size: 20px;
+      font-weight: 600;
+      position: relative;
+      margin-bottom: 0.2rem;
+    }
+  }
+}
+
+.wrapperCards {
+  background-color: #FFF;
+  box-shadow: 0 3px 9px 0 rgb(28 28 51 / 15%);
+
+  position: relative;
+  margin-bottom: 1.5rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+
+  background-clip: border-box;
+  border-radius: 5px;
+
+  .cardHeader {
+    background-color: transparent;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 1rem 1.5rem;
+    align-items: center;
+
+    h3 {
+      font-size: 1rem;
+      font-weight: 500;
+      text-transform: uppercase;
+    }
+  }
+
+  .cardBody {
+    padding: 25px;
+
+    form {
+      .cardRow {
+        padding-right: 5px;
+        padding-left: 5px;
+        margin-bottom: 0.75rem; 
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
+
+        .formGroup {
+          label {
+            display: inline-block;
+            margin-bottom: 0.5rem; 
+          }
+
+          input {
+            color: #000;
+            // background-color: #E4E9F7;
+            border: 1px solid rgba(0, 0, 0, 0.2);
+
+            display: block;
+            width: 100%;
+            height: 40px;
+            padding: 0.375rem 0.75rem;
+            font-size: 0.875rem;
+            font-weight: 400;
+            line-height: 1.5;
+
+            background-clip: padding-box;
+            border-radius: 7px;
+            transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+            
+            background: #FAFAFA;
+
+            &:disabled{
+              cursor: not-allowed;
+            }
+          }
+
+          .wrapperOptions {
+            display: flex;
+            .option {
+              & + div {
+                margin-left: 15px;
+              }
+
+              strong {
+                margin-right: 6px;
+              }
+            }            
+          }
+        }
+      }
+    }
+  }
+}
+
+.buttonEdit {
+  cursor: pointer;
+  font-weight: 400;
+  letter-spacing: .03em;
+  font-size: 0.8125rem;
+  min-width: 2.375rem;
+  color: #fff;
+  background: #6259ca;
+  border-color: #6a62cc;
+  display: inline-block;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  line-height: 1.84615385;
+  border-radius: 5px;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, filter 0.2s;
+
+  &:hover {
+    filter: brightness(0.9);
+  }
+}
+
+.wrapperTable {
+  display: block;
+  width: 100%;
+  overflow-x: auto;
+
+  table {
+    white-space: nowrap;
+    border: 1px solid #eaedf1;
+    padding: 0.75rem;
+    vertical-align: top;
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 1rem;
+
+    thead {
+      vertical-align: bottom;
+
+      tr {
+        border-color: inherit;
+        border-style: solid;
+        border-width: 0;
+
+        th {
+          vertical-align: bottom;
+          border-bottom: 1px solid #eaedf1;
+          border-bottom-width: 1px;
+          border-top: 0;
+          padding: 0.75rem;
+          color: #2e3138;
+          text-transform: uppercase;
+          font-size: 0.875rem; 
+        }
+      }
+    }
+
+    & > :not(:last-child)> :last-child>* {
+        border-bottom-color: #eaedf1;
+    }
+  }
+}
