--- a/src/components/GlobalWrapper/styles.module.scss
+++ b/src/components/GlobalWrapper/styles.module.scss
@@ -1,12 +1,18 @@
+.globalWrapperContainer {
+  position: relative;
+  z-index: 2;
+}
+
 .container {
   position: relative;
   background: #E4E9F7;
   min-height: 100vh;
-  top: 0;
+  top: 75px;
   left: 78px;
   width: calc(100% - 78px);
   transition: all 0.5s ease;
-  z-index: 2;
+
+  flex: 1;
 
 
   padding: 20px;
